# indian_stock_extract

./: .gitignore  Data_Extract_Experiments.ipynb  README.md  cli.py  pyproject.toml
src/datastore/: dailydata.py  instruments.py  readwrite.py  setup.py
src/extract/: dailydata.py  instruments.py
src/extract_tools/: extract_historical.py  extract_instruments.py
src/utils/: constants.py  logger.py  resources.py  storage_utils.py
testing/: database_test.py
