[tool.poetry]
name = "indian_stock_extract"
version = "0.0.1"
description = "Get Stock Data for trading systems India"
authors = ["Prabhat Rastogi <prabhatrastogik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
zlogin = "*"
kiteconnect = "*"
peewee = "*"
psycopg2-binary = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
pylint = "*"
autopep8 = "*"
pytest = "*"
pytest-pgsql = "*"

[tool.pytest.ini_options]
testpaths = [
    "testing",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
